--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,4 +50,4 @@ extra:
     provider: google
     property: G-HLXBBN0SQ4
 
-copyright: Copyright &copy; 2024 Anders Sundman
+copyright: Copyright &copy; 2024-2025 Anders Sundman
