--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,8 @@ plugins:
   - rss:
       match_path: posts/.*
       date_from_meta:
-        as_creation: date
+        as_creation: "date" # means from page.meta.date
+        as_update: "git" # means from git log
       categories:
         - categories
 
